feat: write the TypeScript of the endpoints from the engine
A run of the engine with -Dhilla.generator.java=true writes the
TypeScript of the endpoints out of what the parser has just walked
rather than by running the Node generator over the OpenAPI definition
it leaves behind. The default is unchanged, so an application only gets
it by asking, and the property goes once the move is done.

The parser keeps what it found, which is what the writers work from,
and the plugin building it goes first in the chain so that it is the
last to see a node. The endpoints call the server through the client of
the application when there is one next to the output folder, and
through the generated one otherwise, which is what the Node generator
decides the same way.

A run without a single browser callable class leaves no generated file
and no list of them behind, the way the Node generator cleans up after
one, since nothing in the folder is then the generator's.

The task which parses the classes is the one writing the TypeScript,
because only that run has what the writers need; the task which runs
the Node generator does nothing then. The two become one once there is
no OpenAPI definition to write.